--- a/HocRetrofit/app/src/main/res/layout/activity_list_user.xml
+++ b/HocRetrofit/app/src/main/res/layout/activity_list_user.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/swipeRefreshLayout"
     android:orientation="vertical"
     android:padding="14dp"
     tools:context=".ListUser">
@@ -13,4 +14,4 @@
         android:id="@+id/rcv_user"
         >
     </androidx.recyclerview.widget.RecyclerView>
-</LinearLayout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
