--- a/HocRetrofit/app/src/main/res/layout/activity_main.xml
+++ b/HocRetrofit/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:id="@+id/btn_user"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="User" />
+        android:text="Test User Reply" />
 
     <Button
         android:id="@+id/btn_list_users"
